--- a/add.html
+++ b/add.html
@@ -42,7 +42,11 @@
 
             <tr>
                 <td><label for="category">Entry Category:</label></td>
-                <td><input id="category" name="title" type="text" required/></td>
+                <td><select name='category' id="category">
+                    <option value="Work">Work</option>
+                    <option value="University">University</option>
+                    <option value="Family">Family</option>
+                </select></td>
             </tr>
 
             <tr>
