--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="design.css"/>
+    <link rel="stylesheet"
+          href="unsemantic-grid-responsive-tablet.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1"/>
+    <link href='https://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
-    <title></title>
+    <title>myBlog</title>
 </head>
 <body>
 
+<header>
+    <h1>myBlog</h1>
+    <p>because the internet needs to know what I think</p>
+</header>
+
+<nav>
+    <ul>
+        <a href="blog.html"><li>All Blog Items</li></a>
+        <a href="blog.html"><li>Work Items</li></a>
+        <a href="blog.html"><li>University Items</li></a>
+        <a href="blog.html"><li>Family Items</li></a>
+        <a href="add.html"><li>Insert a Blog Item</li></a>
+    </ul>
+</nav>
+
+<div id="content">
+    <div class="article">
+        <p>Today at work by Adam </p>
+        <p>Work</p>
+        <p>Today I went to work and did lots of very complicated coding things. I was very pleased that I managed to finish them all</p>
+    </div>
+
+    <div class="article">
+        <p>University Lecturer by Brian </p>
+        <p>University</p>
+        <p>This week in university I had an amazing lecture. I can’t remember the name of the lecturer but he was really really good.</p>
+    </div>
+
+    <div class="article">
+        <p>Dads new television by Charlie</p>
+        <p>Family</p>
+        <p>Today dad bought a new television. He likes to watch the F1 on it a lot.</p>
+    </div>
+</div>
+
+
+<section class="grid-100">
+    <footer>
+        Designed by Kyle Martin, 2016
+    </footer>
+</section>
+
 </body>
+
 </html>
