--- a/add.html
+++ b/add.html
@@ -18,11 +18,11 @@
 
 <nav>
     <ul>
-        <a href="blog.html"><li>All Blog Items</li></a>
-        <a href="blog.html"><li>Work Items</li></a>
-        <a href="blog.html"><li>University Items</li></a>
-        <a href="blog.html"><li>Family Items</li></a>
-        <a href="add.html"><li>Insert a Blog Item</li></a>
+        <li><a href="blog.html">All Blog Items</a></li>
+        <li><a href="blog.html">Work Items</a></li>
+        <li><a href="blog.html">University Items</a></li>
+        <li><a href="blog.html">Family Items</a></li>
+        <li><a href="add.html">Insert a Blog Item</a></li>
     </ul>
 </nav>
 
